--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.0",
     "nodemon": "^2.0.22",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "uuid": "^9.0.0"
   },
   "name": "restoback",
   "version": "1.0.0",
